# crew-assistant

./: .coverage  .env  .env.example  .fishrc  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_BRANCH_adaptive-workflow.md  CLAUDE_BRANCH_agent-module.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  ENGINEERING_IMPROVEMENTS.md  EXPERIMENTAL_FEATURES_AUDIT.md  README.md  README_CREW_WORKFLOW_TEST.md  ROADMAP.md  TECH_STACK.md  TESTING_STATUS.md  activate.sh  crew_agents.py  crew_assistant.code-workspace  crew_test_tasks.py  fix_log.md  generate_git_diff_report.py  long_duration_crew_test.py  long_duration_test.py  main.py  pyproject.toml  requirements.txt  run-base-agent.py  run.py  sys_arch_audit.md  test_context.py  test_crew_system.py  test_tool_calling.py  test_validation.py  test_validation_fix.py  wrap_crew_run.py
.github/actions/cached-venv/: action.yml
.github/workflows/: ci.yml  cicd.yml
agents/: __init__.py  base.py  commander.py  dev.py  developer.py  planner.py  registry.py  researcher.py  reviewer.py  ux.py
core/: __init__.py  agent_registry.py  crew_engine.py
core/context_engine/: __init__.py  context_router.py  context_types.py  fact_store.py  inject_context.py  memory_store.py  summary_queue.py
crew_assistant/: __init__.py  agent_registry.py  config.py  crew_agents.py  dynamic_crew.py  entrypoint.py  exceptions.py  fetch_docs.py  select_model.py  test_context.py  ux_loop.py  wrap_crew_run.py
crew_assistant/context/: __init__.py  facts.py  inject.py  memory.py  router.py  summary.py  types.py
crew_runs/: 2025-06-19T17-32-52__first_full_cycle.json  2025-06-19T18-41-49__eb2323cd-1561-4e43-82fb-0c1db28a69b6.json  2025-06-19T18-45-09__5ed9a755-4cee-47ec-9bee-61fc8e8b51f8.json  2025-06-20T05-50-47__6973d7df-da1d-4578-b139-0ce2ef640fea.json  2025-06-20T06-01-03__ux__073beb5a-e40f-40ec-a67f-e7d2941d4152.json  2025-06-20T06-01-57__ux__e167f9a9-a6e9-4ad1-82fc-aad4b725660f.json  2025-06-20T06-02-44__ux__12a414e7-d440-4eef-ba81-f3be986ff811.json  2025-06-20T06-03-59__ux__4ea7576c-4b66-45fb-aabb-3c7fd06711cf.json  2025-06-20T06-12-21__ux__0ec9f486-f2b4-4ecd-a4c5-4505c8514322.json
docs/: API.md  ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  README_LONG_DURATION_TEST.md
integration-workspace/: INTEGRATION_PLAN.md
memory/: context_log.json
memory/archive/: README.md
memory/memory_store/: 2025-06-20T05-14-38.669930__Agent.json  2025-06-20T05-14-38.670032__Agent.json  2025-06-20T05-14-38.670104__Agent.json  2025-06-20T05-15-57.411726__Agent.json  2025-06-20T05-19-15.277814__Agent.json  2025-06-20T05-19-15.277965__Agent.json  2025-06-20T05-19-15.278045__Agent.json  2025-06-20T05-21-37.162415__Agent.json  2025-06-20T05-51-05.597203__UX.json  2025-06-20T05:11:33.274178__Agent.json  2025-06-20T06-01-15.400558__UX.json  2025-06-20T06-02-14.271903__UX.json  2025-06-20T06-03-00.160427__UX.json  2025-06-20T06-04-10.865247__UX.json  2025-06-20T06-13-15.785017__Dev.json  2025-06-20T06-13-15.785274__UX.json
providers/: __init__.py  base.py  lmstudio.py  ollama.py  registry.py
src/crew_assistant/: __main__.py  config.py  exceptions.py
src/crew_assistant/agents/: __init__.py  base.py  commander.py  dev.py  file_tools.py  planner.py  registry.py  reviewer.py  tool_parser.py  tools.py  ux.py
src/crew_assistant/core/: agent_registry.py  crew_engine.py
src/crew_assistant/core/context_engine/: context_router.py  fact_store.py  inject_context.py  memory_store.py  summary_queue.py
src/crew_assistant/providers/: __init__.py  base.py  lmstudio.py  ollama.py  registry.py
src/crew_assistant/ui/: setup.py  shell.py
src/crew_assistant/utils/: compute_throttling.py  fact_learning.py  m4_throttling.py  model_selector.py  ollama_adapter.py  simple_ollama_chat.py  testing_config.py  ux_shell.py
src/crew_assistant/workflows/: base.py  sequential.py
test_logs/crew_workflow_20250630_140339/: final_report.md
test_logs/long_duration_20250630_043955/: final_report.md
tests/: README.md  conftest.py  run_crew_test_throttled.sh  run_throttled_test.sh  test_agent_registry.py  test_agents.py  test_fact_store.py  test_injector.py  test_memory.py  test_memory_store.py  test_select_model.py  test_summary_queue.py
tests/fixtures/: crew_test_tasks.py
tests/integration/: test_battle_providers.py  test_crew_workflow.py  test_real_providers.py  test_task_validation.py
tests/long_duration/: long_duration_crew_test.py  long_duration_test.py
tests/system/: __init__.py  test_end_to_end.py
tests/unit/: test_config.py  test_context_router.py  test_enhanced_providers.py  test_fact_store.py  test_inject_context.py  test_memory_store.py  test_model_selector.py  test_provider_priority.py  test_provider_priority_real.py  test_summary_queue.py  test_task_context_delegation.py  test_validation.py
ui/: __init__.py  setup.py  shell.py
utils/: compute_throttling.py  fact_learning.py  m4_throttling.py  model_selector.py  ollama_adapter.py  provider_selector.py  simple_chat.py  simple_ollama_chat.py  testing_config.py  ux_shell.py
workflows/: __init__.py  base.py  sequential.py
