[project]
name = "crew-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai>=0.130.0",
    "markdown>=3.8.2",
    "openai>=1.88.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
